--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<b><i>Securely Connect People to Content, when and where they need it</i></b>
+
 Enterprise Technical Solutions LLC is in the business of helping organizations achieve digital transformations by providing support for  Enterprise Content Management, Business Process management in the form of software procurement, implementation, Software License renewal and maintenance support.
  
 Solutions           
