--- a/index.html
+++ b/index.html
@@ -1,24 +1,51 @@
-<b><i>Securely Connect People to Content, when and where they need it</i></b>
+Securely Connect People to Content, when and where they need it.
 
-Enterprise Technical Solutions LLC is in the business of helping organizations achieve digital transformations by providing support for  Enterprise Content Management, Business Process management in the form of software procurement, implementation, Software License renewal and maintenance support.
+Enterprise Technical Solutions LLC is in the business of helping organizations achieve digital transformations by providing support for  Enterprise Content Management,
+Business Process management in the form of software procurement, implementation, Software License renewal and maintenance support.
  
 Solutions           
+
 We specialize in  implementing and supporting the following document management and workflow automation software suites:
+
+
 Kofax TotalAgility®  Bridge systems of engagement and systems of record to optimize customer experience, reduce operating costs, and streamline decision-making
-Kofax Capture (KC) is a powerful production level capture platform. It captures information from virtually any source: scanner, multi-function printer, print stream, email, fax, web service or folder. Kofax Capture is available in an enterprise edition that offers high availability and disaster recovery for mission critical implementations.
+
+
+Kofax Capture (KC) is a powerful production level capture platform. It captures information from virtually any source: scanner, multi-function printer,
+print stream, email, fax, web service or folder. Kofax Capture is available in an enterprise edition that offers high availability and disaster recovery for mission critical implementations.
  
-Kofax Capture Network Server (KCNS) extends the capabilities of Kofax Capture by securely connecting Kofax Capture remote systems. Batches can be scanned and processed at the remote offices, and then uploaded to the central site for further processing and export to a content repository like SharePoint website.. KCNS eliminates the common and costly practice of shipping documents from remote offices to a central site for processing. 
+
+Kofax Capture Network Server (KCNS) extends the capabilities of Kofax Capture by securely connecting Kofax Capture remote systems. 
+Batches can be scanned and processed at the remote offices, and then uploaded to the central site for further processing and export to a content repository like SharePoint website..
+KCNS eliminates the common and costly practice of shipping documents from remote offices to a central site for processing. 
+
 
 Kofax Transformation Modules (KTM)Automatically classify, separate, and extract data from any document to reduce labor costs and accelerate business processes. 
-Kofax Analytics for Capture (KAFC) provides optimized out-of-the-box dashboards focused on elevating the visibility into the production scanning operations. More importantly, KAFC delivers interactive views into staff performance and recognition accuracy. It allows production operations managers to report on the effectiveness of their capture solution and improve overall system throughput.
+
+
+
+Kofax Analytics for Capture (KAFC) provides optimized out-of-the-box dashboards focused on elevating the visibility into the production scanning operations. 
+More importantly, KAFC delivers interactive views into staff performance and recognition accuracy.
+It allows production operations managers to report on the effectiveness of their capture solution and improve overall system throughput.
+
 
 OpenText™ AppEnhancer  “Enhance” processes – from accounts payable to employee onboarding – with trusted ECM software.
 
+
+
 PegaSystems - A low-code development platform for building engaging, smart and easy to deploy process automation and dynamic case management applications.
 
-Upgrade Services Contact us to upgrade your version of Kofax. ApplicationXtender or AppEnhancer and PegaSystems. We provide whatever combination of upgrade support you may need, including consulting, remote upgrades (if applicable), and onsite, end-to-end upgrades.
 
-Technical Support Contact us to assist with any issue or question you may have regarding the use of Kofax Applications, OpenText AppEnhancer or Pega. If you’re not yet on our Software maintenance contract, contact us so we can get you on the right plan.
+
+
+Upgrade Services Contact us to upgrade your version of Kofax. ApplicationXtender or AppEnhancer and PegaSystems. We provide whatever combination of upgrade support you may need, 
+including consulting, remote upgrades (if applicable), and onsite, end-to-end upgrades.
+
+
+
+
+Technical Support Contact us to assist with any issue or question you may have regarding the use of Kofax Applications, OpenText AppEnhancer or Pega.
+If you’re not yet on our Software maintenance contract, contact us so we can get you on the right plan.
  
 Contact Us +1 209-271-2357
            
