--- a/index.html
+++ b/index.html
@@ -1,52 +1,390 @@
-Securely Connect People to Content, when and where they need it.
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+        <meta name="keywords" content="">
+		<title>Enterprise Technical Solutions</title>
+		<!-- Favicon -->
+        <link href="favicons/images-favicon.png" rel="shortcut icon">
+		<!-- CSS -->
+		<link href="css/bootstrap-bootstrap.min.css" rel="stylesheet">
+		<link href="css/owl-carousel-owl.carousel.min.css" rel="stylesheet">
+		<link href="css/owl-carousel-owl.theme.default.min.css" rel="stylesheet">
+		<link href="css/magnific-popup-magnific-popup.min.css" rel="stylesheet">
+		<link href="css/sal-sal.min.css" rel="stylesheet">
+		<link href="css/css-theme.min.css" rel="stylesheet">
+		<!-- Fonts/Icons -->
+		<link href="css/bootstrap-icons-bootstrap-icons.css" rel="stylesheet">
+		<link href="css/css-all.css" rel="stylesheet">
+	</head>
+	<body data-preloader="1">
 
-Enterprise Technical Solutions LLC is in the business of helping organizations achieve digital transformations by providing support for  Enterprise Content Management,
-Business Process management in the form of software procurement, implementation, Software License renewal and maintenance support.
- 
-Solutions           
+	
+		<!-- Custom Cursor -->
+		<div id="cursor"></div>
+		<!-- end Custom Cursor -->
 
-We specialize in  implementing and supporting the following document management and workflow automation software suites:
+		<!-- Header -->
+		<div class="header right">
+			<div class="container">
+				<!-- Logo -->
+				<div class="header-logo">
+					<h3><a href="#"><img src="images/logo.png"></a></h3>
+				</div>
+				<!-- Menu -->
+				<div class="header-menu">
+					<ul class="nav">
+						<li class="nav-item">
+							<a class="nav-link" href="#" style="color:#0071a8">Home</a>	
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#about">About Us</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#services">Services</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#contact">Contact Us</a>
+						</li>
+					</ul>
+				</div>
+				<!-- Menu Extra -->
+				<div class="header-menu-extra">
+					<ul class="list-inline">
+						<li><a href="#"><i class="bi bi-facebook"></i></a></li>
+						<li><a href="#"><i class="bi bi-twitter"></i></a></li>
+						<li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+					</ul>
+				</div>
+				<!-- Menu Toggle -->
+				<button class="header-toggle">
+					<span></span>
+				</button>
+			</div><!-- end container -->
+		</div>
+		<!-- end Header -->
 
+		<!-- Hero section -->
+		<div class="section-xl bg-image parallax" data-bg-src="images/ets_banner1.jpeg">
+			<div class="bg-dark-05">
+				<div class="container">
+					<div class="row g-4">
+						<div class="col-12 col-lg-8 col-xl-7">
+							<h1 class="fw-light">Satisfied customer is the best business strategy of all</h1>
+							<a class="button button-lg button-radius button-white-2 mt-4" href="#contact">Get in Touch</a>
+						</div>
+					</div><!-- end row -->
+				</div><!-- end container -->
+			</div>
+		</div>
+		<!-- end Hero section -->
 
-Kofax TotalAgility®  Bridge systems of engagement and systems of record to optimize customer experience, reduce operating costs, and streamline decision-making
+		<!-- Clients section -->
+		<div class="container text-center n-margin-4">
+			<div class="bg-white p-4 p-lg-5 border-radius-1 box-shadow">
+				<div class="owl-carousel" data-owl-dots="false" data-owl-margin="50" data-owl-autoplay="true" data-owl-xs="1" data-owl-sm="2" data-owl-md="3" data-owl-lg="4" data-owl-xl="5">
+					<div class="client-box">
+						<a href="#"><img src="images/images-client-1.png" alt=""></a>
+					</div>
+					<div class="client-box">
+						<a href="#"><img src="images/images-client-2.png" alt=""></a>
+					</div>
+					<div class="client-box">
+						<a href="#"><img src="images/images-client-3.png" alt=""></a>
+					</div>
+					<div class="client-box">
+						<a href="#"><img src="images/images-client-4.png" alt=""></a>
+					</div>
+					<div class="client-box">
+						<a href="#"><img src="images/images-client-5.png" alt=""></a>
+					</div>
+					<div class="client-box">
+						<a href="#"><img src="images/images-client-6.png" alt=""></a>
+					</div>
+					<div class="client-box">
+						<a href="#"><img src="images/images-client-7.png" alt=""></a>
+					</div>
+				</div><!-- end owl-carousel -->
+			</div>
+		</div><!-- end container -->
+		<!-- end Clients section -->
 
+		<!-- About section -->
+		<div class="section">
+			<div class="container" id="about">
+				<div class="row align-items-center g-5">
+					<!-- About Image -->
+					<div class="col-12 col-lg-6">
+						<img class="border-radius-1 box-shadow" src="images/images-corp-clean-2-about.jpg" alt="">
+					</div>
+					<!-- About Content -->
+					<div class="col-12 col-lg-6">
+						<h3 class="fw-light mb-3" style="color:#0071a8">We Focus on Quality, not Quantity</h3>
+						<p>
+								Enterprise Technical Solutions LLC is in the business of helping 
+								organizations achieve digital transformations by providing support 
+								for  Enterprise Content Management, Business Process management in
+								 the form of software procurement, implementation, Software License
+								  renewal and maintenance support.
+						</p>
+						<a class="button-text-3 mt-4" href="#">Read More</a>
+					</div>
+				</div><!-- end row -->
+			</div><!-- end container -->
+		</div>
+		<!-- end About section -->
 
-Kofax Capture (KC) is a powerful production level capture platform. It captures information from virtually any source: scanner, multi-function printer,
-print stream, email, fax, web service or folder. Kofax Capture is available in an enterprise edition that offers high availability and disaster recovery for mission critical implementations.
- 
+		<!-- Features section -->
+		<div class="section pt-0">
+			<div class="container icon-5xl text-lg-center">
+				<div class="row g-4 g-lg-5">
+					<!-- Feature box 1 -->
+					<div class="col-12 col-lg-4">
+						<div class="text-dark mb-2">
+							<i class="bi bi-lightbulb"></i>
+						</div>
+						<h6 class="fw-medium font-small uppercase" style="color:#0071a8">Implementation Solutions </h6>
+						<p>
+						We specialize in  implementing and supporting the following document management and workflow automation software suites	
+					</p>
+					</div>
+					<!-- Feature box 2 -->
+					<div class="col-12 col-lg-4">
+						<div class="text-dark mb-2">
+							<i class="bi bi-lightbulb"></i>
+						</div>
+						<h6 class="fw-medium font-small uppercase" style="color:#0071a8">Kofax TotalAgility®</h6>
+						<p>
+							Bridge systems of engagement and systems of record to optimize customer experience, reduce operating costs, and streamline decision-making	</p>
+					</div>
+					<!-- Feature box 3 -->
+					<div class="col-12 col-lg-4">
+						<div class="text-dark mb-2">
+							<i class="bi bi-lightbulb"></i>
+						</div>
+						<h6 class="fw-medium font-small uppercase" style="color:#0071a8">Kofax Capture (KC)</h6>
+						<p>
+						 Is a powerful production level capture platform. It captures information from virtually any source: scanner, multi-function printer, print stream, email.</p>
+					</div>
+				</div><!-- end row -->
+			</div><!-- end container -->
+		</div>
+		<!-- end Features section -->
 
-Kofax Capture Network Server (KCNS) extends the capabilities of Kofax Capture by securely connecting Kofax Capture remote systems. 
-Batches can be scanned and processed at the remote offices, and then uploaded to the central site for further processing and export to a content repository like SharePoint website..
-KCNS eliminates the common and costly practice of shipping documents from remote offices to a central site for processing. 
+		<!-- Testimonial section -->
+		<div class="container">
+			<div class="bg-gray-lighter p-4 p-lg-5 border-radius-1">
+				<div class="owl-carousel" data-owl-items="1" data-owl-nav="true">
+					<!-- Testimonial box 1 -->
+					<div class="testimonial-box">
+						<img class="mb-3" src="images/images-testimonial-1.jpg" alt="">
+						<h5 class="fw-normal line-height-140 m-0">Emiley Haley</h5>
+						<span class="font-small fw-normal">Manager - Mono</span>
+						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
+					</div>
+					<!-- Testimonial box 2 -->
+					<div class="testimonial-box">
+						<img class="mb-3" src="images/images-testimonial-2.jpg" alt="">
+						<h5 class="fw-normal line-height-140 m-0">Andrew Palmer</h5>
+						<span class="font-small fw-normal">Developer - Mono</span>
+						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
+					</div>
+					<!-- Testimonial box 3 -->
+					<div class="testimonial-box">
+						<img class="mb-3" src="images/images-testimonial-3.jpg" alt="">
+						<h5 class="fw-normal line-height-140 m-0">Anna Mullen</h5>
+						<span class="font-small fw-normal">Designer - Mono</span>
+						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
+					</div>
+				</div><!-- end owl-carousel -->
+			</div>
+		</div><!-- end container -->
+		<!-- end Testimonial section -->
 
+		<!-- Services section -->
+		<div class="section">
+			<div class="container" id="services">
+				<div class="row g-4 g-lg-5">
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature-box">
+							<div class="feature-box-icon bg-dark text-white">
+								<i class="fas fa-chalkboard-teacher"></i>
+							</div>
+							<h5 class="fw-normal">Upgrade Services</h5>
+							<p>
+									Contact us to upgrade your version of Kofax. ApplicationXtender or AppEnhancer. 
+									We provide whatever combination of upgrade support you may need, including 
+									consulting, remote upgrades (if applicable), and onsite, end-to-end upgrades.
+								</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature-box">
+							<div class="feature-box-icon bg-dark text-white">
+								<i class="fas fa-chalkboard-teacher"></i>
+							</div>
+							<h5 class="fw-normal">Technical Support </h5>
+							<p>
+									Contact us to assist with any issue or question you may have regarding the use of 
+									Kofax Applications, OpenText AppEnhancer. If you’re not yet on our Software
+									 maintenance contract us so we can get you on the right plan.							</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature-box">
+							<div class="feature-box-icon bg-dark text-white">
+								<i class="fas fa-chalkboard-teacher"></i>
+							</div>
+							<h5 class="fw-normal">Kofax Analytics for Capture </h5>
+							<p>
+									(KAFC) provides optimized out-of-the-box dashboards focused on elevating the visibility 
+									into the production scanning operations. More importantly, KAFC delivers interactive 
+									views into staff performance and recognition accuracy							</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature-box">
+							<div class="feature-box-icon bg-dark text-white">
+								<i class="fas fa-chalkboard-teacher"></i>
+							</div>
+							<h5 class="fw-normal">Kofax Transformation Modules (KTM)</h5>
+							<p>
+									Automatically classify, separate, and extract data from any document 
+									to reduce labor costs and accelerate business processes. 							</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature-box">
+							<div class="feature-box-icon bg-dark text-white">
+								<i class="fas fa-chalkboard-teacher"></i>
+							</div>
+							<h5 class="fw-normal">OpenText™ AppEnhancer </h5>
+							<p>
+									“Enhance” processes – from accounts payable to employee onboarding – with 
+									trusted ECM software							</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature-box">
+							<div class="feature-box-icon bg-dark text-white">
+								<i class="fas fa-chalkboard-teacher"></i>
+							</div>
+							<h5 class="fw-normal">Kofax Capture Network Server (KCNS)</h5>
+							<p>
+									Extends the capabilities of Kofax Capture by securely connecting Kofax 
+									Capture remote systems.							</p>
+						</div>
+					</div>
+				</div><!-- end row -->
+			</div><!-- end container -->
+		</div>
+		<!-- end Services section -->
 
-Kofax Transformation Modules (KTM)Automatically classify, separate, and extract data from any document to reduce labor costs and accelerate business processes. 
+		<!-- Parallax section -->
+		<div class="section-xl bg-image parallax" data-bg-src="images/ets_banner2.jpeg">
+			<div class="bg-dark-05">
+				<div class="container text-end">
+					<h1 class="fw-light">Securely Connect People to Content<br> when and where they need it</h1>
+					<a class="button button-lg button-radius button-white-2 mt-3" href="#">Start Now</a>
+				</div><!-- end container -->
+			</div>
+		</div>
+		<!-- end Parallax section -->
+<div style="height:50px"></div>
+		<!-- Contact Us -->
+		<div class="section pt-0" id="contact">
+				<div class="container">
+					<div class="contact-form">
+						<form method="post" action="mailto:aminayaboumaldonado@gmail.com" id="contactform">
+							<div class="row gx-3 gy-0">
+								<div class="col-12 col-sm-6">
+									<input type="text" id="name" name="name" placeholder="Name" required="">
+								</div>
+								<div class="col-12 col-sm-6">
+									<input type="email" id="email" name="email" placeholder="E-Mail" required="">
+								</div>
+							</div>
+							<input type="text" id="subject" name="subject" placeholder="Subject" required="">
+							<textarea name="message" id="message" placeholder="Message"></textarea>
+							<button class="button button-lg button-outline-dark" type="submit">Send Message</button>
+						</form>
+						<!-- Submit result -->
+						<div class="submit-result">
+							<span id="success">Thank you! Your Message has been sent.</span>
+							<span id="error">Something went wrong, Please try again!</span>
+						</div>
+					</div><!-- end contact-form -->
+				</div><!-- end container -->
+			</div>
+		</div>
+		<!-- end Contact Us -->
 
+		<footer>
+			<div class="section-sm bg-dark">
+				<div class="container">
+					<div class="row g-3">
+						<div class="col-6 col-sm-6 col-lg-3">
+							<h3><img src="images/logo.png"></h3>
+						</div>
+						<div class="col-6 col-sm-6 col-lg-3">
+							<h6 class="font-small fw-normal uppercase">Useful Links</h6>
+							<ul class="list-dash">
+								<li><a href="#">Home</a></li>
+								<li><a href="#">About Us</a></li>
+								<li><a href="#">Services</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>
+						<div class="col-6 col-sm-6 col-lg-3">
+							<h6 class="font-small fw-normal uppercase">Additional Links</h6>
+							<ul class="list-dash">
+								<li><a href="#">Services</a></li>
+								<li><a href="#">Process</a></li>
+								<li><a href="#">FAQ</a></li>
+								<li><a href="#">Careers</a></li>
+							</ul>
+						</div>
+						<div class="col-6 col-sm-6 col-lg-3">
+							<h6 class="font-small fw-normal uppercase">Contact Info</h6>
+							<ul class="list-unstyled">
+								<li>1401 21st Street STE R <br>
+										Sacramento, CA 95811</li>
+								<li>aminayaboumaldonado@gmail.com</li>
+							</ul>
+						</div>
+					</div><!-- end row(1) -->
 
+					<hr class="mt-4 mb-4">
 
-Kofax Analytics for Capture (KAFC) provides optimized out-of-the-box dashboards focused on elevating the visibility into the production scanning operations. 
-More importantly, KAFC delivers interactive views into staff performance and recognition accuracy.
-It allows production operations managers to report on the effectiveness of their capture solution and improve overall system throughput.
+					<div class="row g-2">
+						<div class="col-12 col-md-6 text-center text-md-start">
+							<p>&copy; 2022 ETS LLC, All Rights Reserved.</p>
+						</div>
+						<div class="col-12 col-md-6 text-center text-md-end">
+							<ul class="list-inline">
+								<li><a href="#"><i class="bi bi-facebook"></i></a></li>
+								<li><a href="#"><i class="bi bi-twitter"></i></a></li>
+								<li><a href="#"><i class="bi bi-instagram"></i></a></li>
+							</ul>
+						</div>
+					</div><!-- end row(2) -->
+				</div><!-- end container -->
+			</div>
+		</footer>
 
+		<!-- Scroll to top button -->
+		<div class="scrolltotop">
+			<a class="button-circle button-circle-md button-circle-dark" href="#"><i class="bi bi-arrow-up"></i></a>
+		</div>
+		<!-- end Scroll to top button -->
 
-OpenText™ AppEnhancer  “Enhance” processes – from accounts payable to employee onboarding – with trusted ECM software.
-
-
-
-PegaSystems - A low-code development platform for building engaging, smart and easy to deploy process automation and dynamic case management applications.
-
-
-
-
-Upgrade Services Contact us to upgrade your version of Kofax. ApplicationXtender or AppEnhancer and PegaSystems. We provide whatever combination of upgrade support you may need, 
-including consulting, remote upgrades (if applicable), and onsite, end-to-end upgrades.
-
-
-
-
-Technical Support Contact us to assist with any issue or question you may have regarding the use of Kofax Applications, OpenText AppEnhancer or Pega.
-If you’re not yet on our Software maintenance contract, contact us so we can get you on the right plan.
- 
-Contact Us +1 209-271-2357
-           
-
+		<!-- ***** JAVASCRIPTS ***** -->
+		<script src="js/plugins-jquery.min.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi4SV0ZRVGoIDH2E00YtJ8Gvg67eaPG5A"></script>
+		<script src="js/v3-polyfill.min.js"></script>
+		<script src="js/plugins-plugins.js"></script>
+		<script src="js/js-functions.min.js"></script>
+	</body>
+</html>
