--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
         <meta name="keywords" content="">
-		<title>Enterprise Technical Solutions</title>
+		<title>Intelligent Information Management Solution Provider</title>
 		<!-- Favicon -->
         <link href="favicons/images-favicon.png" rel="shortcut icon">
 		<!-- CSS -->
@@ -125,7 +125,7 @@
 						<p>
 								Enterprise Technical Solutions LLC is in the business of helping 
 								organizations achieve digital transformations by providing support 
-								for  Enterprise Content Management, Business Process management in
+								for  Enterprise Content Management,ERP and Business Process management in
 								 the form of software procurement, implementation, Software License
 								  renewal and maintenance support.
 						</p>
@@ -168,39 +168,48 @@
 						<p>
 						 Is a powerful production level capture platform. It captures information from virtually any source: scanner, multi-function printer, print stream, email.</p>
 					</div>
+					<!-- Feature box 4 -->
+					<div class="col-12 col-lg-4">
+						<div class="text-dark mb-2">
+							<i class="bi bi-lightbulb"></i>
+						</div>
+						<h6 class="fw-medium font-small uppercase" style="color:#0071a8">SAP HANA® ecosystem</h6>
+						<p>
+							We help you build, deploy, and support an SAP HANA environment that best fits your business requirements. With us, you benefit from an extensive range of approaches and infrastructure options for SAP HANA managed services.</p>
+					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
 		</div>
 		<!-- end Features section -->
 
 		<!-- Testimonial section -->
-		<div class="container">
+		<!-- <!-- <div class="container">
 			<div class="bg-gray-lighter p-4 p-lg-5 border-radius-1">
 				<div class="owl-carousel" data-owl-items="1" data-owl-nav="true">
 					<!-- Testimonial box 1 -->
-					<div class="testimonial-box">
+					<!-- <div class="testimonial-box">
 						<img class="mb-3" src="images/images-testimonial-1.jpg" alt="">
 						<h5 class="fw-normal line-height-140 m-0">Emiley Haley</h5>
 						<span class="font-small fw-normal">Manager - Mono</span>
 						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
 					</div>
 					<!-- Testimonial box 2 -->
-					<div class="testimonial-box">
+					<!-- <div class="testimonial-box">
 						<img class="mb-3" src="images/images-testimonial-2.jpg" alt="">
 						<h5 class="fw-normal line-height-140 m-0">Andrew Palmer</h5>
 						<span class="font-small fw-normal">Developer - Mono</span>
 						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
-					</div>
+					</div> -->
 					<!-- Testimonial box 3 -->
-					<div class="testimonial-box">
+					<!-- <div class="testimonial-box">
 						<img class="mb-3" src="images/images-testimonial-3.jpg" alt="">
 						<h5 class="fw-normal line-height-140 m-0">Anna Mullen</h5>
 						<span class="font-small fw-normal">Designer - Mono</span>
 						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
-					</div>
-				</div><!-- end owl-carousel -->
+					</div> -->
+				</div> --><!-- end owl-carousel -->
 			</div>
-		</div><!-- end container -->
+		</div> --><!-- end container --> -->
 		<!-- end Testimonial section -->
 
 		<!-- Services section -->
