--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<a class="nav-link" href="#services">Services</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#contact">Contact Us</a>
+							<a class="nav-link" href="#contact" 916-426-2064</a>
 						</li>
 					</ul>
 				</div>
