--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
         <meta name="keywords" content="">
-		<title>Intelligent Information Management Solution Provider</title>
+		<title>Enterprise Technical Solutions</title>
 		<!-- Favicon -->
         <link href="favicons/images-favicon.png" rel="shortcut icon">
 		<!-- CSS -->
@@ -46,7 +46,7 @@
 							<a class="nav-link" href="#services">Services</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#contact" 916-426-2064</a>
+							<a class="nav-link" href="#contact">Contact Us</a>
 						</li>
 					</ul>
 				</div>
@@ -72,8 +72,8 @@
 				<div class="container">
 					<div class="row g-4">
 						<div class="col-12 col-lg-8 col-xl-7">
-							<h1 class="fw-light">Satisfied customer is the best business strategy of all</h1>
-							<a class="button button-lg button-radius button-white-2 mt-4" href="#contact">Get in Touch</a>
+							<h1 class="fw-light">ETS LLC provides enterprise content management procurement, licensing, implementation and best technical support for Kofax Capture, Kofax TotalAgility®, OpenText AppEnhancer & ApplicationXtender.</h1>
+							<a class="button button-lg button-radius button-white-2 mt-4" href="#contact">Speak to Lamin 916-426-2064    Certified Small Business  2029853</a>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
@@ -82,33 +82,33 @@
 		<!-- end Hero section -->
 
 		<!-- Clients section -->
-		<div class="container text-center n-margin-4">
-			<div class="bg-white p-4 p-lg-5 border-radius-1 box-shadow">
-				<div class="owl-carousel" data-owl-dots="false" data-owl-margin="50" data-owl-autoplay="true" data-owl-xs="1" data-owl-sm="2" data-owl-md="3" data-owl-lg="4" data-owl-xl="5">
-					<div class="client-box">
-						<a href="#"><img src="images/images-client-1.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="images/images-client-2.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="images/images-client-3.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="images/images-client-4.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="images/images-client-5.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="images/images-client-6.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="images/images-client-7.png" alt=""></a>
-					</div>
-				</div><!-- end owl-carousel -->
-			</div>
-		</div><!-- end container -->
+		<!-- <div class="container text-center n-margin-4"> -->
+			<!-- <div class="bg-white p-4 p-lg-5 border-radius-1 box-shadow"> -->
+				<!-- <div class="owl-carousel" data-owl-dots="false" data-owl-margin="50" data-owl-autoplay="true" data-owl-xs="1" data-owl-sm="2" data-owl-md="3" data-owl-lg="4" data-owl-xl="5"> -->
+					<!-- <div class="client-box"> -->
+						<!-- <a href="#"><img src="images/images-client-1.png" alt=""></a> -->
+					<!-- </div> -->
+					<!-- <div class="client-box"> -->
+						<!-- <a href="#"><img src="images/images-client-2.png" alt=""></a> -->
+					<!-- </div> -->
+					<!-- <div class="client-box"> -->
+						<!-- <a href="#"><img src="images/images-client-3.png" alt=""></a> -->
+					<!-- </div> -->
+					<!-- <div class="client-box"> -->
+						<!-- <a href="#"><img src="images/images-client-4.png" alt=""></a> -->
+					<!-- </div> -->
+					<!-- <div class="client-box"> -->
+						<!-- <a href="#"><img src="images/images-client-5.png" alt=""></a> -->
+					<!-- </div> -->
+					<!-- <div class="client-box"> -->
+						<!-- <a href="#"><img src="images/images-client-6.png" alt=""></a> -->
+					<!-- </div> -->
+					<!-- <div class="client-box"> -->
+						<!-- <a href="#"><img src="images/images-client-7.png" alt=""></a> -->
+					<!-- </div> -->
+				<!-- </div><!-- end owl-carousel --> -->
+			<!-- </div> -->
+		<!-- </div><!-- end container --> -->
 		<!-- end Clients section -->
 
 		<!-- About section -->
@@ -125,7 +125,7 @@
 						<p>
 								Enterprise Technical Solutions LLC is in the business of helping 
 								organizations achieve digital transformations by providing support 
-								for  Enterprise Content Management,ERP and Business Process management in
+								for  Enterprise Content Management, Business Process management in
 								 the form of software procurement, implementation, Software License
 								  renewal and maintenance support.
 						</p>
@@ -168,49 +168,40 @@
 						<p>
 						 Is a powerful production level capture platform. It captures information from virtually any source: scanner, multi-function printer, print stream, email.</p>
 					</div>
-					<!-- Feature box 4 -->
-					<div class="col-12 col-lg-4">
-						<div class="text-dark mb-2">
-							<i class="bi bi-lightbulb"></i>
-						</div>
-						<h6 class="fw-medium font-small uppercase" style="color:#0071a8">SAP HANA® ecosystem</h6>
-						<p>
-							We help you build, deploy, and support an SAP HANA environment that best fits your business requirements. With us, you benefit from an extensive range of approaches and infrastructure options for SAP HANA managed services.</p>
-					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
 		</div>
 		<!-- end Features section -->
 
-		<!-- Testimonial section -->
-		<!-- <!-- <div class="container">
+		<!-- <!-- Testimonial section -->
+		<!--<div class="container">
 			<div class="bg-gray-lighter p-4 p-lg-5 border-radius-1">
 				<div class="owl-carousel" data-owl-items="1" data-owl-nav="true">
 					<!-- Testimonial box 1 -->
-					<!-- <div class="testimonial-box">
-						<img class="mb-3" src="images/images-testimonial-1.jpg" alt="">
-						<h5 class="fw-normal line-height-140 m-0">Emiley Haley</h5>
-						<span class="font-small fw-normal">Manager - Mono</span>
-						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
-					</div>
-					<!-- Testimonial box 2 -->
-					<!-- <div class="testimonial-box">
-						<img class="mb-3" src="images/images-testimonial-2.jpg" alt="">
-						<h5 class="fw-normal line-height-140 m-0">Andrew Palmer</h5>
-						<span class="font-small fw-normal">Developer - Mono</span>
-						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
-					</div> -->
-					<!-- Testimonial box 3 -->
-					<!-- <div class="testimonial-box">
-						<img class="mb-3" src="images/images-testimonial-3.jpg" alt="">
-						<h5 class="fw-normal line-height-140 m-0">Anna Mullen</h5>
-						<span class="font-small fw-normal">Designer - Mono</span>
-						<p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p>
-					</div> -->
-				</div> --><!-- end owl-carousel -->
-			</div>
-		</div> --><!-- end container --> -->
-		<!-- end Testimonial section -->
+					<!-- <div class="testimonial-box"> -->
+						<!-- <img class="mb-3" src="images/images-testimonial-1.jpg" alt=""> -->
+						<!-- <h5 class="fw-normal line-height-140 m-0">Emiley Haley</h5> -->
+						<!-- <span class="font-small fw-normal">Manager - Mono</span> -->
+						<!-- <p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p> -->
+					<!-- </div> -->
+					<!-- <!-- Testimonial box 2 --> -->
+					<!-- <div class="testimonial-box"> -->
+						<!-- <img class="mb-3" src="images/images-testimonial-2.jpg" alt=""> -->
+						<!-- <h5 class="fw-normal line-height-140 m-0">Andrew Palmer</h5> -->
+						<!-- <span class="font-small fw-normal">Developer - Mono</span> -->
+						<!-- <p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p> -->
+					<!-- </div> -->
+					<!-- <!-- Testimonial box 3 --> -->
+					<!-- <div class="testimonial-box"> -->
+						<!-- <img class="mb-3" src="images/images-testimonial-3.jpg" alt=""> -->
+						<!-- <h5 class="fw-normal line-height-140 m-0">Anna Mullen</h5> -->
+						<!-- <span class="font-small fw-normal">Designer - Mono</span> -->
+						<!-- <p class="mt-3">"Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."</p> -->
+					<!-- </div> -->
+				<!-- </div><!-- end owl-carousel --> -->
+			<!-- </div> -->
+		<!-- </div><!-- end container --> -->
+		<!-- end Testimonial section --> -->
 
 		<!-- Services section -->
 		<div class="section">
@@ -360,7 +351,7 @@
 							<ul class="list-unstyled">
 								<li>1401 21st Street STE R <br>
 										Sacramento, CA 95811</li>
-								
+								<li>aminayaboumaldonado@gmail.com</li>
 							</ul>
 						</div>
 					</div><!-- end row(1) -->
