Update contact number and copyright year in index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<div class="row g-4">
 						<div class="col-12 col-lg-8 col-xl-7">
 							<h1 class="fw-light">ETS LLC provides enterprise content management procurement, licensing, implementation and best technical support for Kofax Capture, Kofax TotalAgility®, OpenText AppEnhancer & ApplicationXtender.</h1>
-							<a class="button button-lg button-radius button-white-2 mt-4" href="#contact">Speak to Lamin 916-426-2064    Certified Small Business  2029853</a>
+							<a class="button button-lg button-radius button-white-2 mt-4" href="#contact">Speak to Lamin 279-944-6855    Certified Small Business  2029853</a>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
@@ -360,7 +360,7 @@
 
 					<div class="row g-2">
 						<div class="col-12 col-md-6 text-center text-md-start">
-							<p>&copy; 2022 ETS LLC, All Rights Reserved.</p>
+							<p>&copy; 2025 ETS Prime Consulting, All Rights Reserved.</p>
 						</div>
 						<div class="col-12 col-md-6 text-center text-md-end">
 							<ul class="list-inline">
