Update company description in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<div class="container">
 					<div class="row g-4">
 						<div class="col-12 col-lg-8 col-xl-7">
-							<h1 class="fw-light">ETS LLC provides enterprise content management procurement, licensing, implementation and best technical support for Kofax Capture, Kofax TotalAgility®, OpenText AppEnhancer & ApplicationXtender.</h1>
+							<h1 class="fw-light">ETS Prime Consulting (Enterprise Technical Solutions LLC) is the specialized partner for organizations requiring absolute efficiency across their digital and physical infrastructure. We are in the business of driving digital transformation through expert Enterprise Content Management (ECM) and Business Process Management (BPM), supported by strategic software procurement and implementation. Crucially, we extend this core competency to essential operational domains, offering a unified, single-vendor solution for IT lifecycle management and facilities readiness. Our goal is to deliver the best possible service when our customers need it..</h1>
 							<a class="button button-lg button-radius button-white-2 mt-4" href="#contact">Speak to Lamin 279-944-6855    Certified Small Business  2029853</a>
 						</div>
 					</div><!-- end row -->
